# synoptic

./: .gitignore  .todo.md  Cargo.toml  LICENSE  README.md  build.sh  nolang.txt  tarpaulin-report.html
example/: Cargo.toml
example/src/: .todo.md  main.rs
examples/: debug.rs  example.rs  rust.rs  trimming.rs
src/: 2  highlighter.rs  languages.rs  lib.rs  lib_old.rs  tokens.rs  util.rs
tests/: ]  test.rs
tests/bench/: Cargo.toml
tests/bench/src/: main.rs
